--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile Page</title>
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <!-- Introduction Section -->
+        <header>
+            <h1>Stephen Cheng</h1>
+            <p>I am a fourth-year BS/MS student at Northwestern University in the MAGICS lab advised by Prof. Han Liu. I am broadly interested in embodied AI, the idea of imparting intelligence on physical systems. 
+                I am interested in robot learning, reinforcement learning, and multimodal learning.</p>
+            <div class="contact-links">
+                <a href="mailto:stephenscheng111@gmail.com">Email</a> /
+                <a href="https://github.com/step-cheng">GitHub</a> /
+                <a href="https://www.linkedin.com/in/stephen-s-cheng/">LinkedIn</a>
+            </div>
+            <img src="pfp.jpg" alt="Stephen Cheng" class="profile-image">
+        </header>
+
+        <!-- News Section -->
+        <section class="news">
+            <h2>News</h2>
+            <ul>
+                <li><strong>December 2024:</strong> I am applying for PhD Programs for Fall 2025!</li>
+                <li><strong>September 2024:</strong> I am a Peer Mentor for CS 349: Machine Learning at Northwestern University!</li>
+                <li><strong>August 2023:</strong> I spent a wonderful summer interning at Northrop Grumman, working on satellite systems!</li>
+            </ul>
+        </section>
+
+        <!-- Research Section -->
+        <section class="research">
+            <h2>Research</h2>
+            <ul>
+                <li>Updates coming soon...</li>
+            </ul>
+        </section>
+    </div>
+    <!-- Link to external JavaScript file -->
+    <script src="script.js"></script>
+</body>
+</html>
