--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="https://github.com/step-cheng">GitHub</a> /
                 <a href="https://www.linkedin.com/in/stephen-s-cheng/">LinkedIn</a>
             </div>
-            <img src="pfp.jpg" alt="Stephen Cheng" class="profile-image">
+            <img src="profile.jpg" alt="Stephen Cheng" class="profile-image">
         </header>
 
         <!-- News Section -->
