--- a/index.html
+++ b/index.html
@@ -3,23 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Page</title>
+    <title>Stephen Cheng</title>
+    <link rel="icon" href="favicon.png" type="image">
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js"></script>
 </head>
 <body>
     <div class="container">
         <!-- Introduction Section -->
         <header>
-            <h1>Stephen Cheng</h1>
-            <p>I am a fourth-year BS/MS student at Northwestern University in the MAGICS lab advised by Prof. Han Liu. I am broadly interested in embodied AI, the idea of imparting intelligence on physical systems. 
-                I am interested in robot learning, reinforcement learning, and multimodal learning.</p>
-            <div class="contact-links">
-                <a href="mailto:stephenscheng111@gmail.com">Email</a> /
-                <a href="https://github.com/step-cheng">GitHub</a> /
-                <a href="https://www.linkedin.com/in/stephen-s-cheng/">LinkedIn</a>
+            <div class="profile-container">
+                <div class="profile-intro">
+                    <h1>Stephen Cheng</h1>
+                    <p>I am a fourth-year BS/MS student at Northwestern University in the MAGICS lab advised by Prof. Han Liu. I am broadly interested in embodied AI, the idea of imparting intelligence on physical systems. 
+                        I am interested in robot learning, reinforcement learning, and multimodal learning.
+                    </p>
+                    <div class="contact-links">
+                        <a href="mailto:stephenscheng111@gmail.com">Email</a> /
+                        <a href="https://github.com/step-cheng">GitHub</a> /
+                        <a href="https://www.linkedin.com/in/stephen-s-cheng/">LinkedIn</a>
+                    </div>
+                </div>
+                <img src="profile.jpg" alt="Stephen Cheng" class="profile-image">
             </div>
-            <img src="profile.jpg" alt="Stephen Cheng" class="profile-image">
         </header>
 
         <!-- News Section -->
