--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div class="profile-container">
                 <div class="profile-intro">
                     <h1>Stephen Cheng</h1>
-                    <p>I am a fourth-year BS/MS student at Northwestern University in the MAGICS lab advised by Prof. Han Liu. I am broadly interested in embodied AI, the idea of imparting intelligence on physical systems. 
-                        I am interested in robot learning, reinforcement learning, and multimodal learning.
+                    <p>I am a fourth-year BS/MS student at Northwestern University in the MAGICS lab advised by Prof. Han Liu. I am  interested in embodied AI, the idea of imparting intelligence on physical systems. 
+                        My current research interests include deep learning whole-body control and multimodal learning for robotics.
                     </p>
                     <div class="contact-links">
                         <a href="mailto:stephenscheng111@gmail.com">Email</a> /
@@ -33,9 +33,9 @@
         <section class="news">
             <h2>News</h2>
             <ul>
-                <li><strong>December 2024:</strong> I am applying for PhD Programs for Fall 2025!</li>
-                <li><strong>September 2024:</strong> I am a Peer Mentor for CS 349: Machine Learning at Northwestern University!</li>
-                <li><strong>August 2023:</strong> I spent a wonderful summer interning at Northrop Grumman, working on satellite systems!</li>
+                <li><strong>March 2024:</strong> Began my combined BS/MS degree program in Computer Science with a concentration in deep learning</li>
+                <li<strong>March 2024:</strong> Interned part-time at NWF Strategies on the machine learning team to model voter attributes</li>
+                <li><strong>August 2023:</strong> Interned at Northrop Grumman Space Systems and watched the Cygnus-19 launch in person</li>
             </ul>
         </section>
 
