--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="profile-intro">
                     <h1>Stephen Cheng</h1>
                     <p>I am a fourth-year BS/MS student at Northwestern University in the MAGICS lab advised by Prof. Han Liu. I am  interested in embodied AI, the idea of imparting intelligence on physical systems. 
-                        My current research interests include deep learning whole-body control and multimodal learning for robotics.
+                        My current research interests include vision language action models, representation learning, and more recently, mechanistic interpretability.
                     </p>
                     <div class="contact-links">
                         <a href="mailto:stephenscheng111@gmail.com">Email</a> /
@@ -33,6 +33,7 @@
         <section class="news">
             <h2>News</h2>
             <ul>
+                <li><strong>April 2025:</strong> Committed to a PhD in Computer Science at UMD, advised by Prof. Dinesh Manocha!</li>
                 <li><strong>March 2024:</strong> Began my combined BS/MS degree program in Computer Science with a concentration in deep learning</li>
                 <li<strong>March 2024:</strong> Interned part-time at NWF Strategies on the machine learning team to model voter attributes</li>
                 <li><strong>August 2023:</strong> Interned at Northrop Grumman Space Systems and watched the Cygnus-19 launch in person</li>
